--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -3,7 +3,7 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 120px;
+  min-height: 11vh;
 }
 
 .logo {
@@ -22,9 +22,14 @@ footer {
 
 .website {
   color: #1F4766;
-  padding-top: 0.625em;
+  padding-top: 0.425em;
 }
 
 .address {
-  font-size: 16px;
+  font-size: 0.8em;
+  padding-top: 0.325em;
+}
+
+.phone {
+  font-size: 0.8em;
 }
