--- a/src/pages/channels/Channels.css
+++ b/src/pages/channels/Channels.css
@@ -30,7 +30,7 @@ main {
   min-width: 30vw;
   display: flex;
   flex-direction: row;
-  justify-content: start;
+  justify-content: flex-start;
 }
 
 .time {
