--- a/src/pages/genres/Genres.css
+++ b/src/pages/genres/Genres.css
@@ -9,7 +9,7 @@
   border-radius: 6px;
   cursor: pointer;
   display: flex;
-  justify-content: end;
+  justify-content: flex-end;
   align-items: center;
   flex-direction: column;
   font-size: 1.25em;
