--- a/src/pages/newfilms/Newfilms.css
+++ b/src/pages/newfilms/Newfilms.css
@@ -12,7 +12,7 @@
 .film-container {
   display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   flex-wrap: wrap;
   width: 15vw;
 }
