--- a/src/components/UI/modal/MyModal.module.css
+++ b/src/components/UI/modal/MyModal.module.css
@@ -11,8 +11,9 @@
 .myModalContent {
   padding: 25px;
   background: white;
-  border-radius: 16px;
-  min-width: 250px;
+  border-radius: 8px;
+  width: 25vw;
+  height: 40vh;
 }
 
 .myModal.active {
