--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -32,3 +32,10 @@ header {
   margin-left: 1.6em;
   font-weight: 500;
 }
+
+.login-block {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  min-width: 25vw;
+}
