--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -7,18 +7,10 @@ header {
   border: black 1px solid;
 }
 
-.logo {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 182px;
-  height: 36px;
-}
-
 .logo-svg {
   display: flex;
-  width: 36.12px;
-  height: 36px;
+  width: 11vw;
+  height: 4vh;
 }
 
 .logo-text {
@@ -53,3 +45,9 @@ header {
   transform: scale(1.5);
   transition: 1s ease-out all;
 }
+
+/* .input-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+} */
