--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -8,6 +8,12 @@
   color: white;
 }
 
+@media screen and (max-width: 414px) {
+  .myBtn {
+    padding: 5px 15px;
+  }
+}
+
 .myBtn:hover {
   background-color: #CC221B;
 }
