--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,6 +6,12 @@ footer {
   min-height: 11vh;
 }
 
+@media screen and (max-width: 375px) {
+  footer {
+    display: none;
+  }
+}
+
 .logo {
   height: 4em;
   width: 1.999em;
